[package]
name = "hastyc-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hastyc-common = { path = "../hastyc-common" }
hastyc-parser = { path = "../hastyc-parser" }
hastyc-ast-fmt = { path = "../hastyc-ast-fmt" }
env_logger = "0.10.1"
